[package]
name = "httpie"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1" # 错误处理
clap = { version = "4.2.1", features = ["derive"] } #命令行解析
colored = "2" # 命令终端多彩显示
jsonxf = "1.1" #  JSON pretty-print 格式化
mime = "0.3.17" # 处理mine类型
reqwest = { version = "0.11", features = ["json"]} # HTTP 客户端
tokio = { version = "1", features = ["full"] } # 异步处理库